<?xml version="1.0"?>
<package format="2">
  <name>qtros</name>
  <version>0.0.0</version>
  <description>The qtros package</description>

  <maintainer email="rachot.stech@gmail.com">rachot</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
 
  <export>
  </export>
</package>
